--- a/WorldGames/src/main/res/values/strings.xml
+++ b/WorldGames/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
-    <string name="app_name">WorldGames</string>
+    <string name="app_name">Game Worlds</string>
+    <string name="settings">Settings</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="email_hint">email</string>
+    <string name="pass_hint">password</string>
+    <string name="sign_in_button">sign in</string>
+    <string name="no_inernet_connection">There is no internet connection. Please, check it and try again.</string>
 </resources>
